Changed color scheme to white and fixed alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,7 +24,7 @@
   /* 
   Extra small devices (phones, 600px and down) 
 */
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 580px) {
     .container {
       flex-direction: column;
     }
